--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 7rem 2rem 2rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,10 +40,10 @@
 }
 
 .cartContainer {
-    width: 95%;
+    width: 98%;
     max-width: 1200px;
     height: 100%;
-    padding: 40px;
+    padding: 20px;
     background-color: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
@@ -55,8 +55,7 @@
     align-items: center;
     position: relative;
     z-index: 3;
-    overflow-y: auto;
-    padding-bottom: 50px;
+    overflow: hidden;
     animation: fadeInScale 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
@@ -65,13 +64,13 @@
 }
 
 .title {
-    font-size: 3.5rem;
+    font-size: 2.22rem;
     font-weight: 800;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 3rem;
-    letter-spacing: 0.15em;
+    margin-bottom: 1.5rem;
+    letter-spacing: 0.1em;
     font-family: 'Rubik-Variable', sans-serif;
     text-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
